added search component and api route, added api route for venuesId

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -78,8 +78,7 @@
 
 #venueLink {
     position: relative;
-    left: 24.60%;
-    bottom: 70px;
+    right: 40.60%;
     color: white;
     text-decoration: none;
     font-size: 20px;
