--- a/frontend/src/components/VenuesPage/Venues.css
+++ b/frontend/src/components/VenuesPage/Venues.css
@@ -1,9 +1,11 @@
 #venueContainer {
     position: relative;
     top: 100px;
-    color: white;
+    background-color: white;
     z-index: 50;
     height: 100px;
     width: 100%;
-    /* margin-bottom: 20px; */
+    list-style-type: none;
+    margin-bottom: 20px;
+    padding: 20px;
 }
