--- a/frontend/src/components/VenueIdPage/venueId.css
+++ b/frontend/src/components/VenueIdPage/venueId.css
@@ -13,6 +13,8 @@
     z-index: 120;
 }
 
-.venueList {
-    text-align: center;
+.venue-image {
+    max-height: 100px;
+    max-width: 100px;
+    border-radius: 50%;
 }
